--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,8 +16,16 @@ jobs:
           node-version: "14.x"
       - run: npm i -g pnpm
       - run: pnpm update -r --latest -E
-      - run: pnpm install p-queue@6.6.2
-        working-directory: ./components/assistive-webdriver
+      - run: |
+          ( cd ./components/assistive-webdriver && pnpm install p-queue@6.6.2 )
+          ( cd ./components/assistive-webdriver && pnpm install node-fetch@2.6.1 )
+          ( cd ./components/assistive-webdriver && pnpm install -D @types/node-fetch@2.5.12 )
+          ( cd ./components/assistive-playwright-client && pnpm install node-fetch@2.6.1 )
+          ( cd ./components/assistive-playwright-client && pnpm install -D @types/node-fetch@2.5.12 )
+          ( cd ./components/assistive-playwright-server && pnpm install -D node-fetch@2.6.1 )
+          ( cd ./components/assistive-playwright-server && pnpm install -D @types/node-fetch@2.5.12 )
+          ( cd ./components/assistive-playwright-tester && pnpm install node-fetch@2.6.1 )
+          ( cd ./components/assistive-playwright-tester && pnpm install -D @types/node-fetch@2.5.12 )
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3.8.0
         with:
