--- a/components/assistive-playwright-client/package.json
+++ b/components/assistive-playwright-client/package.json
@@ -25,19 +25,20 @@
     "dist"
   ],
   "devDependencies": {
-    "@microsoft/api-extractor": "7.18.7",
+    "@microsoft/api-extractor": "7.18.10",
+    "@types/node-fetch": "2.5.12",
     "@types/pngjs": "6.0.1",
     "assistive-playwright-server": "workspace:*",
-    "jest": "27.1.1",
+    "jest": "27.2.1",
     "rimraf": "3.0.2",
-    "rollup": "2.56.3",
+    "rollup": "2.57.0",
     "tslib": "2.3.1",
     "typescript": "4.4.3",
     "wait-port": "0.2.9"
   },
   "dependencies": {
     "node-fetch": "2.6.1",
-    "playwright-core": "1.14.1",
+    "playwright-core": "1.15.0",
     "uuid": "8.3.2",
     "vm-providers": "workspace:*",
     "ws": "8.2.2"
