--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -46,7 +46,7 @@
     "yargs": "17.2.1"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.18.15",
+    "@microsoft/api-extractor": "7.18.16",
     "@rollup/plugin-typescript": "8.2.5",
     "@sinonjs/fake-timers": "8.0.1",
     "@types/co-body": "6.1.0",
@@ -66,9 +66,9 @@
     "pngjs": "6.0.0",
     "rimraf": "3.0.2",
     "rollup": "2.58.0",
-    "selenium-webdriver": "4.0.0-rc-2",
+    "selenium-webdriver": "4.0.0",
     "tslib": "2.3.1",
-    "typescript": "4.4.3"
+    "typescript": "4.4.4"
   },
   "peerDependencies": {
     "selenium-webdriver": "*"
