--- a/components/assistive-playwright-client/package.json
+++ b/components/assistive-playwright-client/package.json
@@ -30,7 +30,6 @@
     "@types/pngjs": "6.0.1",
     "assistive-playwright-server": "workspace:*",
     "jest": "27.5.1",
-    "rimraf": "3.0.2",
     "rollup": "2.68.0",
     "tslib": "2.3.1",
     "typescript": "4.5.5",
@@ -45,8 +44,7 @@
   },
   "scripts": {
     "prepare": "pnpm build",
-    "prebuild": "rimraf dist",
-    "build": "pnpm build:rollup && pnpm build:dts && pnpm build:api",
+    "build": "node ../../tools/clean && pnpm build:rollup && pnpm build:dts && pnpm build:api",
     "build:rollup": "rollup --failAfterWarnings -c",
     "build:dts": "tsc -p tsconfig.d.json",
     "build:api": "api-extractor run --config ./api-extractor.json --verbose",
