--- a/components/assistive-playwright-server/package.json
+++ b/components/assistive-playwright-server/package.json
@@ -35,7 +35,6 @@
     "@types/yargs": "17.0.8",
     "jest": "27.5.1",
     "node-fetch": "2.6.7",
-    "rimraf": "3.0.2",
     "rollup": "2.68.0",
     "tslib": "2.3.1",
     "typescript": "4.5.5",
@@ -44,10 +43,9 @@
   },
   "scripts": {
     "prepare": "pnpm build",
-    "prebuild": "rimraf dist",
     "build:validation": "node ./generateValidation",
     "build:rollup": "rollup --failAfterWarnings -c",
-    "build": "pnpm build:validation && pnpm build:rollup",
+    "build": "node ../../tools/clean && pnpm build:validation && pnpm build:rollup",
     "test": "nyc --cwd ../.. jest"
   },
   "license": "MIT"
