--- a/components/assistive-playwright-tester/package.json
+++ b/components/assistive-playwright-tester/package.json
@@ -29,7 +29,6 @@
     "@types/node-fetch": "2.6.1",
     "@types/yargs": "17.0.8",
     "playwright-core": "1.19.2",
-    "rimraf": "3.0.2",
     "rollup": "2.68.0",
     "tslib": "2.3.1",
     "typescript": "4.5.5",
@@ -37,8 +36,7 @@
   },
   "scripts": {
     "prepare": "pnpm build",
-    "prebuild": "rimraf dist",
-    "build": "rollup --failAfterWarnings -c"
+    "build": "node ../../tools/clean && rollup --failAfterWarnings -c"
   },
   "license": "MIT"
 }
