--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -64,7 +64,6 @@
     "jest": "27.5.1",
     "json-schema-to-typescript": "10.1.5",
     "pngjs": "6.0.0",
-    "rimraf": "3.0.2",
     "rollup": "2.68.0",
     "selenium-webdriver": "4.1.1",
     "tslib": "2.3.1",
@@ -75,8 +74,7 @@
   },
   "scripts": {
     "prepare": "pnpm build",
-    "prebuild": "rimraf dist build",
-    "build": "pnpm build:schema && pnpm build:rollup && pnpm build:dts && pnpm build:api",
+    "build": "node ../../tools/clean && pnpm build:schema && pnpm build:rollup && pnpm build:dts && pnpm build:api",
     "build:schema": "node build-config-schema.js && json2ts -i config-schema.json -o src/server/config.ts",
     "build:rollup": "rollup --failAfterWarnings -c",
     "build:dts": "tsc -p tsconfig.d.json",
