--- a/components/vm-providers/package.json
+++ b/components/vm-providers/package.json
@@ -39,15 +39,13 @@
     "@types/uuid": "8.3.4",
     "jest": "27.5.1",
     "json-schema-to-typescript": "10.1.5",
-    "rimraf": "3.0.2",
     "rollup": "2.68.0",
     "tslib": "2.3.1",
     "typescript": "4.5.5"
   },
   "scripts": {
     "prepare": "pnpm build",
-    "prebuild": "rimraf dist build",
-    "build": "pnpm build:schema && pnpm build:rollup && pnpm build:dts && pnpm build:api",
+    "build": "node ../../tools/clean && pnpm build:schema && pnpm build:rollup && pnpm build:dts && pnpm build:api",
     "build:schema": "json2ts -i config-schema.json -o src/config.ts",
     "build:rollup": "rollup --failAfterWarnings -c",
     "build:dts": "tsc -p tsconfig.d.json",
