--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,11 +138,11 @@ jobs:
       - run: cat vboxwebsrv.log
         if: ${{ always() }}
       - run: pnpm nyc-report
-        if: matrix.ENABLE_COVERAGE == '1' && always()
+        if: matrix.ENABLE_COVERAGE == '1'
       - uses: codecov/codecov-action@v1
         with:
           file: ./coverage/lcov.info
-        if: matrix.ENABLE_COVERAGE == '1' && always()
+        if: matrix.ENABLE_COVERAGE == '1'
       - if: matrix.ENABLE_COVERAGE == '0' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/')
         name: pnpm publish
         run: |
