--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
     needs:
       - build-text-to-socket-engine
     strategy:
+      fail-fast: false
       matrix:
         ENABLE_COVERAGE: ["0", "1"]
     env:
